--- a/src/main/resources/application-deployJ.properties
+++ b/src/main/resources/application-deployJ.properties
@@ -1,9 +1,9 @@
-spring.profiles.active=${profile}
+server.port=80
 
 # database connection datasource
-spring.datasource.url=jdbc:mariadb://localhost:3306/demodb
-spring.datasource.username=root
-spring.datasource.password=mariadb
+spring.datasource.url=${rds_url}
+spring.datasource.username=${rds_username}
+spring.datasource.password=${rds_password}
 
 # jpa config
 spring.jpa.properties.hibernate.format_sql=true
