--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.profiles.active=${profile}
+#server.port=8182
 
 # database connection datasource
 spring.datasource.url=jdbc:mariadb://localhost:3306/demodb
